Add header and hero sections

--- a/index.html
+++ b/index.html
@@ -4,8 +4,54 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Umindu Haputhanthri - Portfolio</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
+
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <p>A personal portfolio site build to present my academic projects, technical skills, and career aspirations in software engineering</p>
+  <!-- Header Section -->
+  <header class="site-header">
+    <div class="header-container">
+      <a href="#" class="site-title">Umindu Haputhanthri</a>
+
+      <nav class="nav-bar">
+        <a href="#" class="nav-link active">Home</a>
+        <a href="#" class="nav-link">About</a>
+        <a href="#" class="nav-link">Projects</a>
+        <a href="#" class="contact-btn">Contact Me</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="hero-section">
+    <div class="hero-container">
+      <div class="hero-content">
+        <h1 class="hero-title">
+          Hello, I'm <span class="highlighted-name">Umindu Haputhanthri</span>
+        </h1>
+        <p class="hero-subtitle">
+          Software Engineering undergraduate passionate about learning, coding, and creating real-world digital experiences
+        </p>
+        <div class="hero-buttons">
+          <a href="#" class="btn btn-primary">View My Work</a>
+          <a href="#" class="btn btn-secondary">Get in Touch</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="scroll-indicator-wrapper">
+      <div class="scroll-indicator">
+        <i class="ri-arrow-down-line ri-xl"></i>
+      </div>
+    </div>
+  </section>
+
+  <script src="script.js"></script>
 </body>
 </html>
