Make header and hero sections responsive to small screen sizes

--- a/index.html
+++ b/index.html
@@ -19,12 +19,28 @@
     <div class="header-container">
       <a href="#" class="site-title">Umindu Haputhanthri</a>
 
-      <nav class="nav-bar">
+      <!-- Desktop Navigation -->
+      <nav class="nav-bar-desktop">
         <a href="#" class="nav-link active">Home</a>
         <a href="#" class="nav-link">About</a>
         <a href="#" class="nav-link">Projects</a>
         <a href="#" class="contact-btn">Contact Me</a>
       </nav>
+
+      <!-- Mobile Menu Button -->
+      <button class="mobile-menu-btn" id="js-mobile-menu-button">
+        <i class="ri-menu-line ri-lg"></i>
+      </button>
+    </div>
+
+    <!-- Mobile Navigation -->
+    <div class="mobile-nav-bar hidden" id="js-mobile-nav-bar">
+      <div class="mobile-nav-links">
+        <a href="#" class="mobile-nav-link">Home</a>
+        <a href="#" class="mobile-nav-link">About</a>
+        <a href="#" class="mobile-nav-link">Projects</a>
+        <a href="#" class="mobile-nav-link">Contact Me</a>
+      </div>
     </div>
   </header>
 
