--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
       <!-- Desktop Navigation -->
       <nav class="nav-bar-desktop">
-        <a href="#" class="nav-link active">Home</a>
-        <a href="#" class="nav-link">About</a>
+        <a href="#home" class="nav-link active">Home</a>
+        <a href="#about" class="nav-link">About</a>
         <a href="#" class="nav-link">Projects</a>
         <a href="#" class="contact-btn">Contact Me</a>
       </nav>
@@ -36,8 +36,8 @@
     <!-- Mobile Navigation -->
     <div class="mobile-nav-bar hidden" id="js-mobile-nav-bar">
       <div class="mobile-nav-links">
-        <a href="#" class="mobile-nav-link">Home</a>
-        <a href="#" class="mobile-nav-link">About</a>
+        <a href="#home" class="mobile-nav-link">Home</a>
+        <a href="#about" class="mobile-nav-link">About</a>
         <a href="#" class="mobile-nav-link">Projects</a>
         <a href="#" class="mobile-nav-link">Contact Me</a>
       </div>
@@ -45,7 +45,7 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="hero-section">
+  <section class="hero-section" id="home">
     <div class="hero-container">
       <div class="hero-content">
         <h1 class="hero-title">
@@ -64,6 +64,100 @@
     <div class="scroll-indicator-wrapper">
       <div class="scroll-indicator">
         <i class="ri-arrow-down-line ri-xl"></i>
+      </div>
+    </div>
+  </section>
+
+  <!-- About Section -->
+  <section class="about-section" id="about">
+    <div class="about-container">
+      <div class="section-title">About Me</div>
+
+      <div class="about-content">
+        <div class="about-image-wrapper">
+          <img 
+            src="./assets/images/about-profile-picture.jpg" 
+            alt="Umindu Haputhanthri - Profile Picture" class="about-image"
+          />
+        </div>
+
+        <div class="about-text">
+          <h3 class="subsection-title">Who I Am</h3>
+          <p class="about-paragraph">
+            I'm an undergraduate software engineering student at NSBM Green University (affiliated with the University of Plymouth, UK), deeply passionate about full-stack development and UI/UX design. I love creating clean, user-friendly, and efficient digital solutions that solve real-world problems.
+          </p>
+          <p class="about-paragraph">
+            My journey in tech has been shaped by hands-on project work—from mobile and web applications to IoT systems—using modern tools like Flutter, Firebase, Java, and ASP.NET Core. I'm always eager to learn, collaborate, and turn ideas into intuitive and functional products that users enjoy.
+          </p>
+
+          <h3 class="subsection-title">My Skills</h3>
+          <div class="skills-grid">
+            <div class="skill-item">
+              <div class="skill-label">
+                <span>Skill 01</span>
+                <span>95%</span>
+              </div>
+              <div class="skill-bar">
+                <div class="skill-progress" style="width: 95%;"></div>
+              </div>
+            </div>
+
+            <div class="skill-item">
+              <div class="skill-label">
+                <span>Skill 02</span>
+                <span>90%</span>
+              </div>
+              <div class="skill-bar">
+                <div class="skill-progress" style="width: 90%;"></div>
+              </div>
+            </div>
+
+            <div class="skill-item">
+              <div class="skill-label">
+                <span>Skill 03</span>
+                <span>85%</span>
+              </div>
+              <div class="skill-bar">
+                <div class="skill-progress" style="width: 85%;"></div>
+              </div>
+            </div>
+
+            <div class="skill-item">
+              <div class="skill-label">
+                <span>Skill 04</span>
+                <span>88%</span>
+              </div>
+              <div class="skill-bar">
+                <div class="skill-progress" style="width: 88%;"></div>
+              </div>
+            </div>
+
+            <div class="skill-item">
+              <div class="skill-label">
+                <span>Skill 05</span>
+                <span>80%</span>
+              </div>
+              <div class="skill-bar">
+                <div class="skill-progress" style="width: 80%;"></div>
+              </div>
+            </div>
+
+            <div class="skill-item">
+              <div class="skill-label">
+                <span>Skill 06</span>
+                <span>92%</span>
+              </div>
+              <div class="skill-bar">
+                <div class="skill-progress" style="width: 92%;"></div>
+              </div>
+            </div>
+          </div>
+
+          <button class="btn btn-primary icon-left">
+            <i class="ri-download-line"></i>
+            Download Resume
+          </button>
+        </div>
       </div>
     </div>
   </section>
