Create separate css files for each section and generate skills section using javascript

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/header.css">
+  <link rel="stylesheet" href="styles/hero.css">
+  <link rel="stylesheet" href="styles/about.css">
+  <link rel="stylesheet" href="styles/general.css">
 </head>
 <body>
   <!-- Header Section -->
@@ -93,89 +96,7 @@
           </p>
 
           <h3 class="subsection-title">My Skills</h3>
-          <div class="skills-grid">
-
-            <!-- TODO: Generate the skills using JavaScript -->
-
-            <div class="skill-item">
-              <div class="skill-label">
-                <span>HTML/CSS</span>
-                <span>95%</span>
-              </div>
-              <div class="skill-bar">
-                <div class="skill-progress" style="width: 95%;"></div>
-              </div>
-            </div>
-
-            <div class="skill-item">
-              <div class="skill-label">
-                <span>JavaScript</span>
-                <span>90%</span>
-              </div>
-              <div class="skill-bar">
-                <div class="skill-progress" style="width: 90%;"></div>
-              </div>
-            </div>
-
-            <div class="skill-item">
-              <div class="skill-label">
-                <span>Java</span>
-                <span>85%</span>
-              </div>
-              <div class="skill-bar">
-                <div class="skill-progress" style="width: 85%;"></div>
-              </div>
-            </div>
-
-            <div class="skill-item">
-              <div class="skill-label">
-                <span>PHP</span>
-                <span>88%</span>
-              </div>
-              <div class="skill-bar">
-                <div class="skill-progress" style="width: 88%;"></div>
-              </div>
-            </div>
-
-            <div class="skill-item">
-              <div class="skill-label">
-                <span>SQL (MySQL)</span>
-                <span>82%</span>
-              </div>
-              <div class="skill-bar">
-                <div class="skill-progress" style="width: 82%;"></div>
-              </div>
-            </div>
-
-            <div class="skill-item">
-              <div class="skill-label">
-                <span>Flutter (Dart)</span>
-                <span>92%</span>
-              </div>
-              <div class="skill-bar">
-                <div class="skill-progress" style="width: 92%;"></div>
-              </div>
-            </div>
-
-            <div class="skill-item">
-              <div class="skill-label">
-                <span>UI/UX Design</span>
-                <span>75%</span>
-              </div>
-              <div class="skill-bar">
-                <div class="skill-progress" style="width: 75%;"></div>
-              </div>
-            </div>
-
-            <div class="skill-item">
-              <div class="skill-label">
-                <span>Git/GitHub</span>
-                <span>78%</span>
-              </div>
-              <div class="skill-bar">
-                <div class="skill-progress" style="width: 78%;"></div>
-              </div>
-            </div>
+          <div class="skills-grid js-skills-grid">
           </div>
 
           <button class="btn btn-primary icon-left" 
