--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="styles/about.css">
   <link rel="stylesheet" href="styles/projects.css">
   <link rel="stylesheet" href="styles/contact.css">
+  <link rel="stylesheet" href="styles/newsletter.css">
+  <link rel="stylesheet" href="styles/footer.css">
   <link rel="stylesheet" href="styles/general.css">
 </head>
 <body>
@@ -26,9 +28,9 @@
 
       <!-- Desktop Navigation -->
       <nav class="nav-bar-desktop">
-        <a href="#home" class="nav-link active">Home</a>
-        <a href="#about" class="nav-link">About</a>
-        <a href="#projects" class="nav-link">Projects</a>
+        <a href="#home" class="nav-link active js-nav-link">Home</a>
+        <a href="#about" class="nav-link js-nav-link">About</a>
+        <a href="#projects" class="nav-link js-nav-link">Projects</a>
         <a href="#contact" class="contact-btn">Contact Me</a>
       </nav>
 
@@ -351,6 +353,80 @@
       </div>
     </div>
   </section>
+
+  <!-- Newsletter Section -->
+  <section class="newsletter-section">
+    <div class="newsletter-container">
+      <div class="newsletter-content">
+        <h2 class="newsletter-title">Subscribe to My Newsletter</h2>
+        <p class="newsletter-description">
+          Stay updated with my latest projects, tech insights, and industry trends.
+        </p>
+
+        <form action="" class="newsletter-form">
+          <input type="email" class="newsletter-input" placeholder="Your email address">
+
+          <button type="submit" class="btn newsletter-btn">
+            Subscribe
+          </button>
+        </form>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-grid">
+        <div class="footer-about">
+          <a href="#" class="footer-logo">Umindu Haputhanthri</a>
+
+          <p class="footer-description">
+            Creating beautiful, functional, and user-centered digital experiences through throughful design and robust development.
+          </p>
+
+          <div class="footer-socials">
+            <a href="https://www.linkedin.com/in/umindu-haputhanthri/" target="_blank" class="footer-social-icon">
+              <i class="ri-linkedin-fill ri-lg"></i>
+            </a>
+            <a href="https://github.com/UminduH" target="_blank" class="footer-social-icon">
+              <i class="ri-github-fill ri-lg"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="footer-links">
+          <h3 class="footer-heading">Quick Links</h3>
+          <ul class="footer-list">
+            <li><a href="#home" class="footer-link">Home</a></li>
+            <li><a href="#about" class="footer-link">About</a></li>
+            <li><a href="#projects" class="footer-link">Projects</a></li>
+            <li><a href="#contact" class="footer-link">Contact</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-links">
+          <h3 class="footer-heading">Services</h3>
+          <ul class="footer-list">
+            <li><a href="#" class="footer-link">Web Development</a></li>
+            <li><a href="#" class="footer-link">Mobile App Development</a></li>
+            <li><a href="#" class="footer-link">UI/UX Design</a></li>
+            <li><a href="#" class="footer-link">Backend Development</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <p class="footer-copy">
+          &copy; 2025 Umindu Haputhanthri. All rights reserved.
+        </p>
+        <div class="footer-policies">
+          <a href="#" class="footer-policy-link">Privacy Policy</a>
+          <a href="#" class="footer-policy-link">Terms of Service</a>
+          <!-- <a href="#" class="footer-policy-link">Cookies Policy</a> -->
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <!-- Back to Top Button -->
   <button class="back-to-top-btn" id="js-back-to-top">
