Generate projects section using javascript

--- a/index.html
+++ b/index.html
@@ -160,75 +160,7 @@
         Here's a selection of my recent work. Each project represents a unique challenge and solution.
       </p>
 
-      <div class="projects-grid">
-
-        <!-- TODO: Generate projecs using JavaScript -->
-
-        <div class="project-card">
-          <div class="project-image-container">
-            <img src="./assets/images/projects/sample-project.jpeg" alt="Project 01 - Sample Project" class="project-image">
-          </div>
-
-          <div class="project-content">
-            <h3 class="project-name">Project 01</h3>
-            <p class="project-description">
-              A sample description for project 01 to test the design and layouts and how it looks.
-            </p>
-
-            <div class="project-tags">
-              <span class="tag tag-blue">Tech 1</span>
-              <span class="tag tag-green">Tech 2</span>
-              <span class="tag tag-purple">Tech 3</span>
-              <span class="tag tag-yellow">Tech 4</span>
-            </div>
-
-            <a href="#" class="project-link">View Project &#129138;</a>
-          </div>
-        </div>
-
-        <div class="project-card">
-          <div class="project-image-container">
-            <img src="./assets/images/projects/sample-project.jpeg" alt="Project 02 - Sample Project" class="project-image">
-          </div>
-
-          <div class="project-content">
-            <h3 class="project-name">Project 02</h3>
-            <p class="project-description">
-              A sample description for project 02 to test the design and layouts and how it looks.
-            </p>
-
-            <div class="project-tags">
-              <span class="tag tag-blue">Tech 1</span>
-              <span class="tag tag-green">Tech 2</span>
-              <span class="tag tag-purple">Tech 3</span>
-              <span class="tag tag-yellow">Tech 4</span>
-            </div>
-
-            <a href="#" class="project-link">View Project &#129138;</a>
-          </div>
-        </div>
-
-        <div class="project-card">
-          <div class="project-image-container">
-            <img src="./assets/images/projects/sample-project.jpeg" alt="Project 03 - Sample Project" class="project-image">
-          </div>
-
-          <div class="project-content">
-            <h3 class="project-name">Project 03</h3>
-            <p class="project-description">
-              A sample description for project 03 to test the design and layouts and how it looks.
-            </p>
-
-            <div class="project-tags">
-              <span class="tag tag-blue">Tech 1</span>
-              <span class="tag tag-green">Tech 2</span>
-              <span class="tag tag-purple">Tech 3</span>
-              <span class="tag tag-yellow">Tech 4</span>
-            </div>
-
-            <a href="#" class="project-link">View Project &#129138;</a>
-          </div>
-        </div>
+      <div class="projects-grid js-projects-grid">
       </div>
     </div>
   </section>
