--- a/index.html
+++ b/index.html
@@ -365,6 +365,6 @@
     <i class="ri-arrow-up-line ri-lg"></i>
   </button>
 
-  <script src="script.js"></script>
+  <script src="scripts/main.js" type="module"></script>
 </body>
 </html>
