Insert email to firestore when user subscribes to newsletter

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <i class="ri-arrow-up-line ri-lg"></i>
   </button>
 
+  <script src="scripts/firebase.js" type="module"></script>
   <script src="scripts/main.js" type="module"></script>
 </body>
 </html>
