--- a/sections/newsletter.html
+++ b/sections/newsletter.html
@@ -6,13 +6,14 @@
         Stay updated with my latest projects, tech insights, and industry trends.
       </p>
 
-      <form action="" class="newsletter-form">
-        <input type="email" class="newsletter-input" placeholder="Your email address">
+      <form class="newsletter-form" id="js-newsletter-form">
+        <input type="text" id="js-newsletter-email-input" class="newsletter-input" placeholder="Your email address">
 
         <button type="submit" class="btn newsletter-btn">
           Subscribe
         </button>
       </form>
+      <div class="newsletter-message" id="js-newsletter-message"></div>
     </div>
   </div>
 </section>
