Add filter functionality in projects section

--- a/sections/about.html
+++ b/sections/about.html
@@ -4,10 +4,10 @@
 
     <div class="about-content">
       <div class="about-image-wrapper">
-        <img 
-          src="./assets/images/about-profile-picture.jpg" 
-          alt="Umindu Haputhanthri - Profile Picture" 
-          loading="lazy" 
+        <img
+          src="./assets/images/about-profile-picture.jpg"
+          alt="Umindu Haputhanthri - Profile Picture"
+          loading="lazy"
           class="about-image"
         />
       </div>
@@ -15,18 +15,24 @@
       <div class="about-text">
         <h3 class="subsection-title">Who I Am</h3>
         <p class="about-paragraph">
-          I'm an undergraduate software engineering student at NSBM Green University (affiliated with the University of Plymouth, UK), deeply passionate about full-stack development and UI/UX design. I love creating clean, user-friendly, and efficient digital solutions that solve real-world problems.
+          I'm an undergraduate software engineering student at NSBM Green
+          University (affiliated with the University of Plymouth, UK), deeply
+          passionate about full-stack development and UI/UX design. I love
+          creating clean, user-friendly, and efficient digital solutions that
+          solve real-world problems.
         </p>
         <p class="about-paragraph">
-          My journey in tech has been shaped by hands-on project work—from mobile and web applications to IoT systems—using modern tools like Flutter, Firebase, Java, and ASP.NET Core. I'm always eager to learn, collaborate, and turn ideas into intuitive and functional products that users enjoy.
+          My journey in tech has been shaped by hands-on project work—from
+          mobile and web applications to IoT systems—using modern tools like
+          Flutter, Firebase, Java, and ASP.NET Core. I'm always eager to learn,
+          collaborate, and turn ideas into intuitive and functional products
+          that users enjoy.
         </p>
 
         <h3 class="subsection-title">My Skills</h3>
-        <div class="skills-grid js-skills-grid">
-        </div>
+        <div class="skills-grid js-skills-grid"></div>
 
-        <button class="btn btn-primary icon-left" 
-          id="js-download-resume-btn">
+        <button class="btn btn-primary icon-left" id="js-download-resume-btn">
           <i class="ri-download-line"></i>
           Download Resume
         </button>
@@ -42,7 +48,8 @@
             </div>
 
             <p class="modal-text">
-              Thank you for your interest in my resume. Please select your preferred format below:
+              Thank you for your interest in my resume. Please select your
+              preferred format below:
             </p>
             <div class="modal-options">
               <button class="modal-option" id="js-download-pdf">
@@ -53,7 +60,7 @@
                     <small>High-quality print-ready version</small>
                   </div>
                 </div>
-                <span class="option-size">108 KB</span>
+                <span class="option-size">129 KB</span>
               </button>
 
               <button class="modal-option" id="js-download-docx">
@@ -64,7 +71,7 @@
                     <small>Editable DOCX version</small>
                   </div>
                 </div>
-                <span class="option-size">75 KB</span>
+                <span class="option-size">76 KB</span>
               </button>
             </div>
           </div>
