--- a/sections/footer.html
+++ b/sections/footer.html
@@ -5,14 +5,23 @@
         <a href="#" class="footer-logo">Umindu Haputhanthri</a>
 
         <p class="footer-description">
-          Creating beautiful, functional, and user-centered digital experiences through throughful design and robust development.
+          Creating beautiful, functional, and user-centered digital experiences
+          through throughful design and robust development.
         </p>
 
         <div class="footer-socials">
-          <a href="https://www.linkedin.com/in/umindu-haputhanthri/" target="_blank" class="footer-social-icon">
+          <a
+            href="https://www.linkedin.com/in/umindu-haputhanthri/"
+            target="_blank"
+            class="footer-social-icon"
+          >
             <i class="ri-linkedin-fill ri-lg"></i>
           </a>
-          <a href="https://github.com/UminduH" target="_blank" class="footer-social-icon">
+          <a
+            href="https://github.com/UminduH"
+            target="_blank"
+            class="footer-social-icon"
+          >
             <i class="ri-github-fill ri-lg"></i>
           </a>
         </div>
