--- a/sections/hero.html
+++ b/sections/hero.html
@@ -5,7 +5,8 @@
         Hello, I'm <span class="highlighted-name">Umindu Haputhanthri</span>
       </h1>
       <p class="hero-subtitle">
-        Software Engineering undergraduate passionate about learning, coding, and creating real-world digital experiences
+        Software Engineering undergraduate passionate about learning, coding,
+        and creating real-world digital experiences
       </p>
       <div class="hero-buttons">
         <a href="#projects" class="btn btn-primary">View My Work</a>
