--- a/sections/newsletter.html
+++ b/sections/newsletter.html
@@ -3,15 +3,19 @@
     <div class="newsletter-content">
       <h2 class="newsletter-title">Subscribe to My Newsletter</h2>
       <p class="newsletter-description">
-        Stay updated with my latest projects, tech insights, and industry trends.
+        Stay updated with my latest projects, tech insights, and industry
+        trends.
       </p>
 
       <form class="newsletter-form" id="js-newsletter-form">
-        <input type="text" id="js-newsletter-email-input" class="newsletter-input" placeholder="Your email address">
+        <input
+          type="text"
+          id="js-newsletter-email-input"
+          class="newsletter-input"
+          placeholder="Your email address"
+        />
 
-        <button type="submit" class="btn newsletter-btn">
-          Subscribe
-        </button>
+        <button type="submit" class="btn newsletter-btn">Subscribe</button>
       </form>
       <div class="newsletter-message" id="js-newsletter-message"></div>
     </div>
