--- a/sections/projects.html
+++ b/sections/projects.html
@@ -2,11 +2,26 @@
   <div class="projects-container">
     <h2 class="projects-title">My Projects</h2>
     <p class="projects-subtitle">
-      Here's a selection of my recent work. Each project represents a unique challenge and solution.
+      Here's a selection of my recent work. Each project represents a unique
+      challenge and solution.
     </p>
 
-    <div class="projects-grid js-projects-grid">
+    <div class="filter-buttons js-filter-buttons">
+      <div class="filter-btn js-filter-btn active" data-filter="all">
+        All Projects
+      </div>
+      <div class="filter-btn js-filter-btn" data-filter="web">
+        Web Development
+      </div>
+      <div class="filter-btn js-filter-btn" data-filter="mobile">
+        Mobile Applications
+      </div>
+      <div class="filter-btn js-filter-btn" data-filter="desktop">
+        Desktop Applications
+      </div>
     </div>
+
+    <div class="projects-grid js-projects-grid"></div>
   </div>
 </section>
 
