--- a/index.html
+++ b/index.html
@@ -1,44 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Umindu Haputhanthri - Portfolio</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Umindu Haputhanthri - Portfolio</title>
 
-  <link rel="icon" href="assets/images/favicon.png" type="image/png">
+    <link rel="icon" href="assets/images/favicon.png" type="image/png" />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
 
-  <link rel="stylesheet" href="styles/header.css">
-  <link rel="stylesheet" href="styles/hero.css">
-  <link rel="stylesheet" href="styles/about.css">
-  <link rel="stylesheet" href="styles/projects.css">
-  <link rel="stylesheet" href="styles/contact.css">
-  <link rel="stylesheet" href="styles/newsletter.css">
-  <link rel="stylesheet" href="styles/footer.css">
-  
-  <link rel="stylesheet" href="styles/general.css">
-</head>
-<body>
-  <!-- Placeholders for the different sections (header, hero, about, etc.) -->
-  <div id="js-header-placeholder"></div>
-  <div id="js-hero-placeholder"></div>
-  <div id="js-about-placeholder"></div>
-  <div id="js-projects-placeholder"></div>
-  <div id="js-contact-placeholder"></div>
-  <div id="js-newsletter-placeholder"></div>
-  <div id="js-footer-placeholder"></div>
+    <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/hero.css" />
+    <link rel="stylesheet" href="styles/about.css" />
+    <link rel="stylesheet" href="styles/projects.css" />
+    <link rel="stylesheet" href="styles/contact.css" />
+    <link rel="stylesheet" href="styles/newsletter.css" />
+    <link rel="stylesheet" href="styles/footer.css" />
 
-  <!-- Back to Top Button -->
-  <button class="back-to-top-btn" id="js-back-to-top">
-    <i class="ri-arrow-up-line ri-lg"></i>
-  </button>
+    <link rel="stylesheet" href="styles/general.css" />
+  </head>
+  <body>
+    <!-- Placeholders for the different sections (header, hero, about, etc.) -->
+    <div id="js-header-placeholder"></div>
+    <div id="js-hero-placeholder"></div>
+    <div id="js-about-placeholder"></div>
+    <div id="js-projects-placeholder"></div>
+    <div id="js-contact-placeholder"></div>
+    <div id="js-newsletter-placeholder"></div>
+    <div id="js-footer-placeholder"></div>
 
-  <script src="scripts/firebase.js" type="module"></script>
-  <script src="scripts/main.js" type="module"></script>
-</body>
+    <!-- Back to Top Button -->
+    <button class="back-to-top-btn" id="js-back-to-top">
+      <i class="ri-arrow-up-line ri-lg"></i>
+    </button>
+
+    <script src="scripts/firebase.js" type="module"></script>
+    <script src="scripts/main.js" type="module"></script>
+  </body>
 </html>
