Fix responsiveness issue in smaller screens

--- a/sections/header.html
+++ b/sections/header.html
@@ -1,4 +1,4 @@
-<header class="site-header">
+<header class="header-section">
   <div class="header-container">
     <a href="#" class="site-title">Umindu Haputhanthri</a>
 
