Implement contact-form functionality

--- a/sections/about.html
+++ b/sections/about.html
@@ -4,12 +4,8 @@
 
     <div class="about-content">
       <div class="about-image-wrapper">
-        <img
-          src="./assets/images/about-profile-picture.jpg"
-          alt="Umindu Haputhanthri - Profile Picture"
-          loading="lazy"
-          class="about-image"
-        />
+        <img src="./assets/images/about-profile-picture.jpg" alt="Umindu Haputhanthri - Profile Picture" loading="lazy"
+          class="about-image" />
       </div>
 
       <div class="about-text">
@@ -60,7 +56,7 @@
                     <small>High-quality print-ready version</small>
                   </div>
                 </div>
-                <span class="option-size">129 KB</span>
+                <span class="option-size">130 KB</span>
               </button>
 
               <button class="modal-option" id="js-download-docx">
@@ -71,7 +67,7 @@
                     <small>Editable DOCX version</small>
                   </div>
                 </div>
-                <span class="option-size">76 KB</span>
+                <span class="option-size">75 KB</span>
               </button>
             </div>
           </div>
