--- a/sections/newsletter.html
+++ b/sections/newsletter.html
@@ -8,12 +8,7 @@
       </p>
 
       <form class="newsletter-form" id="js-newsletter-form">
-        <input
-          type="text"
-          id="js-newsletter-email-input"
-          class="newsletter-input"
-          placeholder="Your email address"
-        />
+        <input type="text" id="js-newsletter-email-input" class="newsletter-input" placeholder="Your email address" />
 
         <button type="submit" class="btn newsletter-btn">Subscribe</button>
       </form>
