--- a/sections/footer.html
+++ b/sections/footer.html
@@ -10,18 +10,10 @@
         </p>
 
         <div class="footer-socials">
-          <a
-            href="https://www.linkedin.com/in/umindu-haputhanthri/"
-            target="_blank"
-            class="footer-social-icon"
-          >
+          <a href="https://www.linkedin.com/in/umindu-haputhanthri/" target="_blank" class="footer-social-icon">
             <i class="ri-linkedin-fill ri-lg"></i>
           </a>
-          <a
-            href="https://github.com/UminduH"
-            target="_blank"
-            class="footer-social-icon"
-          >
+          <a href="https://github.com/UminduH" target="_blank" class="footer-social-icon">
             <i class="ri-github-fill ri-lg"></i>
           </a>
         </div>
