Add UI improvements

--- a/sections/contact.html
+++ b/sections/contact.html
@@ -1,13 +1,13 @@
-<section class="contact-section" id="contact">
+<section class="contact-section" id="contact" data-aos="fade-up">
   <div class="contact-container">
-    <h2 class="contact-title">Get In Touch</h2>
+    <h2 class="contact-title" data-aos="zoom-in">Get In Touch</h2>
     <p class="contact-subtitle">
       Have a project in mind or want to discuss potential collaboration? Free
       free to reach out!
     </p>
 
-    <div class="contact-grid">
-      <div class="contact-form-wrapper">
+    <div class="contact-grid" data-aos="fade-up">
+      <div class="contact-form-wrapper" data-aos="fade-right" data-aos-delay="200">
         <form action="https://formsubmit.co/uminduvh@gmail.com" method="POST" class="contact-form">
           <!-- <input type="hidden" name="_captcha" value="false" /> -->
           <input type="hidden" name="_next" value="https://uminduh.github.io" />
@@ -47,7 +47,7 @@
         </form>
       </div>
 
-      <div class="contact-info-wrapper">
+      <div class="contact-info-wrapper" data-aos="flip-right" data-aos-delay="400">
         <div class="contact-info">
           <h3 class="info-title">Contact Information</h3>
 
