--- a/sections/header.html
+++ b/sections/header.html
@@ -17,7 +17,7 @@
   </div>
 
   <!-- Mobile Navigation -->
-  <div class="mobile-nav-bar hidden" id="js-mobile-nav-bar">
+  <div class="mobile-nav-bar" id="js-mobile-nav-bar">
     <div class="mobile-nav-links">
       <a href="#home" class="mobile-nav-link">Home</a>
       <a href="#about" class="mobile-nav-link">About</a>
