--- a/sections/newsletter.html
+++ b/sections/newsletter.html
@@ -1,4 +1,4 @@
-<section class="newsletter-section">
+<section class="newsletter-section" data-aos="zoom-out-down">
   <div class="newsletter-container">
     <div class="newsletter-content">
       <h2 class="newsletter-title">Subscribe to My Newsletter</h2>
