--- a/sections/projects.html
+++ b/sections/projects.html
@@ -1,12 +1,12 @@
-<section class="projects-section" id="projects">
+<section class="projects-section" id="projects" data-aos="fade-up">
   <div class="projects-container">
-    <h2 class="projects-title">My Projects</h2>
+    <h2 class="projects-title" data-aos="zoom-in">My Projects</h2>
     <p class="projects-subtitle">
       Here's a selection of my recent work. Each project represents a unique
       challenge and solution.
     </p>
 
-    <div class="filter-buttons js-filter-buttons">
+    <div class="filter-buttons js-filter-buttons" data-aos="zoom-in-up">
       <div class="filter-btn js-filter-btn active" data-filter="all">
         All Projects
       </div>
