--- a/sections/about.html
+++ b/sections/about.html
@@ -1,6 +1,6 @@
 <section class="about-section" id="about">
   <div class="about-container">
-    <div class="section-title">About Me</div>
+    <div class="section-title" data-aos="zoom-in">About Me</div>
 
     <div class="about-content">
       <div class="about-image-wrapper">
