--- a/sections/hero.html
+++ b/sections/hero.html
@@ -1,4 +1,4 @@
-<section class="hero-section" id="home">
+<section class="hero-section" id="home" data-aos="fade-up">
   <div class="hero-container">
     <div class="hero-content">
       <h1 class="hero-title">
